k8s/user-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user
spec:
  replicas: 2
  selector:
    matchLabels:
      component: user
  template:
    metadata:
      labels:
        component: user
    spec:
      containers:
        - name: user
          image: caffeines/cse499:user
          ports:
            - containerPort: 4001
      imagePullSecrets:
        - name: regcred
