k8s/auth-node-port.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth
spec:
  type: NodePort
  selector:
    app: auth
  ports:
    - port: 4000
      targetPort: 4000
      nodePort: 31234
