k8s/ingress-service.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: "nginx"

spec:
  rules:
    - http:
        paths:
          - path: /api/auth
            backend:
              serviceName: auth-cluster-ip-service
              servicePort: 4000
          - path: /api/user
            backend:
              serviceName: user-cluster-ip-service
              servicePort: 4001
